--- a/style.css
+++ b/style.css
@@ -27,21 +27,22 @@ body {
 }
 .item-left {
     background-color: rgb(0, 204, 3);
-    grid-row: 3 / 60;
+    grid-row: 3 / 80;
     margin: 2%;
     clip-path: polygon(92% 0, 90% 25%, 100% 100%, 8% 100%, 0% 75%, 17% 0);
 }
 .item-right {
     padding: 2%;
     background-color: rgb(2, 0, 74);
-    grid-row: 3 / 60;
+    grid-row: 3 / 80;
 
 }
 .item-foother {
-    background-color: burlywood;
+    background-color: rgb(0, 0, 0);
     grid-column: 1 / -1;
-    grid-row: 60 / 70;
+    grid-row: 80 / 90;
     border-radius: 20px;
+    
 }
 
 .grid-wrapper {
@@ -77,6 +78,7 @@ body {
     border-top: solid;    
     border-color: red;
 }
+
 
 /*-------------------
 NOTATKI Z WYKŁADU
